changed task to add additional interfaces to ovs bridge

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -17,9 +17,11 @@
   when: (uninstall is defined and not uninstall) or uninstall is not defined
 
 - name: adding ports to ovs bridges
-  openvswitch_port: bridge={{ item.name }} port={{ item.int }} state={{ item.state }}
-  with_items: ovs_bridges
-  when: (item.int is defined and item.state != "absent") and (uninstall is defined and not uninstall)
+  openvswitch_port: bridge={{ item.0.name }} port={{ item.1 }} state={{ item.0.state }}
+  with_subelements:
+    - ovs_bridges
+    - interfaces
+  when: (item.1 is defined and item.0.state != "absent") and (uninstall is defined and not uninstall)
 
 - name: checking for ovs installed
   stat: path=/usr/bin/ovs-vsctl
