added missing with_items for template

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -46,6 +46,7 @@
   register: interfaces_configured
   tags:
     - config_interfaces
+  with_items: config_interfaces
 
 - name: bringing up interfaces
   shell: "ifdown {{ item.name }} && ifup {{ item.name }}"
