--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,29 @@ add_repos: false  #defines if apt repos should be added for obtaining newer code
 apt_repos:
   - ppa:project-calico/kilo  #openstack kilo repo
   - ppa:tomeichhorn/ovs  #openvswitch repo
+interfaces:  #define interfaces here to be configured that are not part of ovs_bridges
+  - name: eth0
+    address:
+    configure: true
+    gateway:
+    method: dhcp
+    netmask:
+    netmask_cidr:
+    network:
+    wireless_network: false
+    wpa_ssid:
+    wpa_psk:
+  - name: wlan0
+    address:
+    configure: false
+    gateway:
+    method: dhcp
+    netmask:
+    netmask_cidr:
+    network:
+    wireless_network: true
+    wpa_ssid: wirelessssid
+    wpa_psk: wirelesskey
 ovs_bridges:
   - name: ext-br  #defines the name of the ovs bridge to create
     add_interfaces: true
